objects/Flow_Input_Format__mdt.object
<CustomObject>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>True_Values__c</fullName>
        <label>True Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                    <default>true</default>
                    <label>Date</label>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Flow Input Format</label>
    <pluralLabel>Flow Input Formats</pluralLabel>
</CustomObject>